# agentgraph

./: .dockerignore  .env  .env.example  .env.production.template  .env.secrets.example  .env.staging  .gitignore  AgentGraph_PRD.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  glama.json  pyproject.toml
.taskmaster/: config.json  state.json
Project Plan/: agentgraph-brand-identity-brief.md
data/: marketing_strategic_context.md  openclaw_batch_progress.json  openclaw_scan_report.json
design-system/: tokens.json
docs/: AgentGraph_CC_Implementation_Brief_v1.md  AgentGraph_Emergent_Cooperation_Design_Brief.md  AgentGraph_Trust_Framework_PRD_v1.md  Bot_Onboarding_Workflow.md  agent-ecosystem-targeting.md  agent-onboarding.md  agentgraph-ecosystem-targeting-v2.md  bot-capabilities.md  bot-onboarding-quickstart.md  cold-start-strategy.md  design-system-rules.md  developer-hub-and-external-trust.md  future-considerations-backlog.md  kenne-action-items.md  launch-checklist.md  moderation-playbook.md  prd-reconciliation.md  privacy-policy.md  quickstart.md  remaining-roadmap.md  research-questions.md  security-scan-false-positives.md  show_hn_post.md  terms-of-service.md  trust-framework-review.md  trust-gateway.md
github-action/: README.md  action.yml  scan.sh
migrations/: env.py
nginx/: gate.html  nginx-ssl.conf  nginx.conf
plugins/langchain-trust/: README.md  pyproject.toml
plugins/langchain-trust/agentgraph_langchain/: __init__.py  tools.py  trust.py
plugins/langchain-trust/tests/: test_trust.py
prompts/: architect.md  ceo.md  compliance.md  cpo.md  cto.md  legal.md
reviews/: architect_review.md  ceo_review.md  compliance_review.md  consolidated_action_plan.md  consolidated_action_plan_v2.md  cpo_review.md  cto_review.md
scripts/: auto_follow_targets.py  backup-prod.sh  backup.sh  bulk_import_moltbook.py  check-capacity.sh  check-staging.sh  create_bluesky_starter_pack.py  create_scan_drafts.py  demo_openclaw_bot.py  deploy-prod.sh  deploy.sh  download-api-docs-assets.sh  gen_a2a_1496_negative_paths.py  generate_avatars.py  health-check-prod.sh  load_test.py  post_openclaw_scan.py  publish_sdks.sh  register_bluesky_feed.py  remove_seed_humans.py  restore-prod.sh  rollback-prod.sh  scan_openclaw_batch.py  scan_openclaw_skills.py  scheduled_corpus_scan.sh  seed_ecosystem_posts.py  seed_production.py  seed_reply_targets.py  seed_staging.py  setup-ssl.sh  setup.sh  start-staging.sh  trust_recompute_cron.py  update_strategic_context.py  weekly_rescan.sh
sdk/: PUBLISHING.md  README.md  pyproject.toml
sdk/agentgraph-agt/: README.md  pyproject.toml
sdk/agentgraph-agt/agentmesh_agentgraph/: __init__.py  provider.py
sdk/agentgraph-pydantic/: README.md  pyproject.toml
sdk/agentgraph-pydantic/agentgraph_pydantic/: __init__.py  guard.py
sdk/agentgraph_sdk/: __init__.py  cli.py  client.py  models.py  verify.py  x402_guard.py
sdk/agentgraph_sdk/examples/: x402_refuse_to_pay.py
sdk/agentgraph_sdk/tests/: test_x402_guard.py
sdk/bridges/agentgraph-bridge-autogen/: README.md  pyproject.toml
sdk/bridges/agentgraph-bridge-autogen/agentgraph_bridge_autogen/: __init__.py  client.py  guard.py
sdk/bridges/agentgraph-bridge-crewai/: README.md  pyproject.toml
sdk/bridges/agentgraph-bridge-crewai/agentgraph_bridge_crewai/: __init__.py  client.py  guard.py
sdk/bridges/agentgraph-bridge-langchain/: README.md  pyproject.toml
sdk/bridges/agentgraph-bridge-langchain/agentgraph_bridge_langchain/: __init__.py  client.py  guard.py
sdk/bridges/agentgraph-bridge-pydantic/: README.md  pyproject.toml
sdk/bridges/agentgraph-bridge-pydantic/agentgraph_bridge_pydantic/: __init__.py  client.py
sdk/github-action/: README.md  action.yml
sdk/github-action/examples/: manifest-crewai.json  manifest-pydantic.json
sdk/js/: README.md  index.js  package-lock.json  package.json
sdk/js/src/: client.js  verify.js
sdk/js/test/: verify.test.js
sdk/mcp-server/: Dockerfile  README.md  pyproject.toml  server.json
sdk/mcp-server/agentgraph_trust/: __init__.py  server.py
sdk/open-agent-trust-python/: README.md  pyproject.toml
sdk/open-agent-trust-python/src/open_agent_trust/: __init__.py  registry.py  types.py  verify.py
sdk/open-agent-trust-python/tests/: test_verify.py
sdk/openclaw-skill/: README.md  pyproject.toml
sdk/openclaw-skill/agentgraph_openclaw_skill/: __init__.py  onboarding.py  security.py  skill.py
sdk/python/: README.md  pyproject.toml
sdk/python/agentgraph/: __init__.py  aip.py  client.py  exceptions.py  marketplace.py  mcp.py  models.py  ws.py
sdk/trust-scan-action/: README.md  action.yml
sdk/trust-scan-action/examples/: trust-scan.yml
src/: aggregation.py  audit.py  cache.py  config.py  content_filter.py  crypto.py  database.py  email.py  email_queue.py  encryption.py  events.py  external_reputation.py  github_auth.py  interactions.py  logging_config.py  main.py  models.py  redis_client.py  signing.py  ssrf.py  toxicity.py  utils.py  ws.py
tests/: conftest.py  test_a2a_agent_card.py  test_a2a_middleware.py  test_account.py  test_action_ref_vectors.py  test_activity.py  test_activity_enhanced.py  test_activity_summary.py  test_admin.py  test_agent_operator.py  test_agent_register.py  test_agent_sdk.py  test_agent_self_improvement.py  test_agent_stats_fleet.py  test_agents.py  test_aggregation.py  test_aggregator_v2.py  test_ai_tells.py  test_aip_delegation.py  test_aip_protocol.py  test_aip_trust_layer.py  test_aip_v2.py  test_aip_v2_ecosystem.py  test_analytics.py  test_anomaly_detection.py  test_anthropic_client_retry.py  test_api_key_management.py  test_aps_rotation_attestation_interop.py  test_attestation_framework.py  test_attestation_providers.py  test_audit_logs.py  test_auth.py  test_auto_moderation.py  test_autogen_audit_export.py  test_autogen_bridge.py  test_autogen_bridge_api.py  test_backup_script.py  test_badge.py  test_badge_embed.py  test_badges_audit.py  (+197 more)
web/: .env.staging  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+1 more)
(+739 files in other folders)
