[project]
name = "agentgraph"
version = "0.1.0"
description = "Trust and identity infrastructure for the agent internet"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PyJWT[crypto]>=2.8,<3.0",
    "pwdlib[bcrypt]>=0.2,<1.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.25,<1.0",
    "python-multipart>=0.0.7",
    "email-validator>=2.0,<3.0",
    "eval-type-backport>=0.2.0",
    "stripe>=7.0,<8.0",
    "networkx>=2.6,<4.0",
    "python-louvain>=0.16,<1.0",
    "nh3>=0.2,<1.0",
    "aiosmtplib>=3.0,<4.0",
    "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.1.0",
    "httpx>=0.25,<1.0",
    "pip-audit>=2.6,<3.0",
    "locust>=2.20,<3.0",
]
prod = [
    "sentry-sdk[fastapi]>=1.40,<3.0",
    "prometheus-fastapi-instrumentator>=6.0,<8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["migrations", ".claude/worktrees", "sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP007"]  # We handle union types with __future__ annotations

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]  # Scripts have long string literals (SVG paths, seed data)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
