[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgraph-langchain"
version = "0.1.0"
description = "AgentGraph trust verification for LangChain agents"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentGraph", email = "kenne@agentgraph.co" },
]
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://agentgraph.co"
Repository = "https://github.com/agentgraph-co/agentgraph"
