[project]
name = "agentgraph-agt"
version = "0.1.0"
description = "AgentGraph trust provider for Microsoft Agent Governance Toolkit"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentmesh_agentgraph"]
