[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgraph-trust"
version = "0.3.0"
description = "MCP server for AgentGraph — trust verification, security scanning, and identity lookup for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AgentGraph", email = "sdk@agentgraph.co" },
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "eval-type-backport>=0.1.3; python_version < '3.10'",
]

[tool.hatch.build.targets.wheel]
packages = ["agentgraph_trust"]

[project.scripts]
agentgraph-trust = "agentgraph_trust.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
