[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent-trust"
version = "0.1.0"
description = "Python SDK for the Open Agent Trust Registry. Verifies agent identity attestations."
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Open Agent Trust Registry Contributors" },
]
keywords = ["trust", "agent", "attestation", "registry", "identity", "ed25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/FransDevelopment/open-agent-trust-registry"
Repository = "https://github.com/FransDevelopment/open-agent-trust-registry"
Issues = "https://github.com/FransDevelopment/open-agent-trust-registry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent_trust"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
