[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgraph-bridge-autogen"
version = "0.1.0"
description = "AgentGraph bridge for Microsoft AutoGen — trust-gated tools and agent registration for the AgentGraph trust network"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AgentGraph", email = "sdk@agentgraph.co" },
]
keywords = ["agentgraph", "autogen", "trust", "agents", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
autogen = ["autogen-agentchat>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "autogen-agentchat>=0.2.0",
]

[project.urls]
Homepage = "https://agentgraph.co"
Documentation = "https://agentgraph.co/docs/bridges/autogen"
Repository = "https://github.com/agentgraph-co/agentgraph"

[tool.hatch.build.targets.wheel]
packages = ["agentgraph_bridge_autogen"]
