[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgraph-bridge-langchain"
version = "0.1.0"
description = "AgentGraph bridge for LangChain — register agents and graphs with the AgentGraph trust network"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AgentGraph", email = "sdk@agentgraph.co" },
]
keywords = ["agentgraph", "langchain", "langgraph", "trust", "agents", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://agentgraph.co"
Documentation = "https://agentgraph.co/docs/bridges/langchain"
Repository = "https://github.com/agentgraph-co/agentgraph"

[tool.hatch.build.targets.wheel]
packages = ["agentgraph_bridge_langchain"]
